src/App.css
html {
  background: url("https://xrat.es/bg.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
}

#root {
  border-radius: 2em;
  padding: 0.5rem;
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
}

span {
  font-size: 2rem;
}

body {
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 75vh;
  text-align: center;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
}

h1 {
  margin: 0px;
  margin-bottom: 0.25rem;
  margin-top: -0.4rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-bottom: 0.5rem;
  font-size: 2.5rem;
  border-radius: 0.3em;
  -webkit-text-stroke-width: 2px;
  -webkit-text-stroke-color: black;
}

input {
  border: 1px solid #333;
  border-radius: 0.3em;
  padding: 0.25rem;
  width: 9em;
  font-size: 1.5rem;
  background-color: black;
  color: white;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
}

select {
  margin-left: 1rem;
  font-size: 1.5rem;
  background-color: white;
  color: black;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  filter: invert(100%);
}

div.equals {
  font-weight: bold;
  font-size: 5rem;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  -webkit-text-stroke-width: 2px;
  -webkit-text-stroke-color: black;
  margin: -0.25em;
  margin-top: -0.45em;
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type="number"] {
  -moz-appearance: textfield;
}

input[type="number"] {
  text-align: center;
}

